--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   page_transition: ^1.1.4
   fancy_bottom_navigation: ^0.3.2
+  curved_navigation_bar: ^0.3.0
+
 
 
 dev_dependencies:
