--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ flutter:
     fonts:
     - asset: fonts/OpenSans-Regular.ttf
     - asset: fonts/OpenSans-SemiBold.ttf
+    - asset: fonts/OpenSans-Light.ttf
 
 
 
