--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   page_transition: ^1.1.4
   fancy_bottom_navigation: ^0.3.2
   curved_navigation_bar: ^0.3.0
+  font_awesome_flutter: ^8.5.0
 
 
 
